@@ -4,23 +4,50 @@ import asia.kala.factory.CollectionFactory;
 import asia.kala.traversable.JavaArray;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
+import java.util.Collections;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static asia.kala.collection.Assertions.*;
 
+@SuppressWarnings("unchecked")
 public interface CollectionTestTemplate {
 
     <E> CollectionFactory<E, ?, ? extends Collection<? extends E>> factory();
 
     @Test
     default void factoryTest() {
-        CollectionFactory<Object, ?, ? extends Collection<?>> factory = factory();
+        CollectionFactory<Object, Object, Collection<?>> factory =
+                (CollectionFactory<Object, Object, Collection<?>>) factory();
         assertIsEmpty(factory.empty());
         assertIsEmpty(factory.from(JavaArray.EMPTY_OBJECT_ARRAY));
         assertIsEmpty(factory.from(java.util.List.of()));
-        assertElements(factory.from(new Object[]{}));
-        assertElements(factory.from(new Object[]{"foo"}), "foo");
-        assertElements(factory.from(java.util.List.of("foo")), "foo");
-        assertElements(factory.from(new Object[]{"foo", "bar"}), "foo", "bar");
-        assertElements(factory.from(java.util.List.of("foo", "bar")), "foo", "bar");
+        assertIsEmpty(factory.from(new Object[]{}));
+
+        for (Integer[] data : TestData.data1) {
+            assertElements(factory.from(data), ((Object[]) data));
+            assertElements(factory.from(Arrays.asList(data)), ((Object[]) data));
+        }
+
+        assertIsEmpty(factory.build(factory.newBuilder()));
+
+        for (Integer[] data : TestData.data1) {
+            Object builder = factory.newBuilder();
+            for (Integer i : data) {
+                factory.addToBuilder(builder, i);
+            }
+            assertElements(factory.build(builder), (Object[]) data);
+        }
     }
+
+    default void isEmptyTest() {
+        assertTrue(factory().empty().isEmpty());
+        assertTrue(factory().from(JavaArray.EMPTY_OBJECT_ARRAY).isEmpty());
+        assertTrue(factory().from(Collections.emptyList()).isEmpty());
+
+        for (Integer[] data : TestData.data1) {
+            assertEquals(data.length == 0, factory().from(data).isEmpty());
+        }
+    }
+
 }
